package utility.managers;

import com.aventstack.extentreports.ExtentTest;

//for TestResult getInstance use,!!OBSOLETE FOR NOW!!
public class ExtentTestObject {
    public ExtentTest test;
}
